Rewrite the page

--- a/Community_Repository.mw
+++ b/Community_Repository.mw
@@ -1,26 +1,24 @@
-= Community Repository =
-There is a community repository that every one can release your projects on Neo.
+The community repository is the place where independent Neo application developers can release projects. It is a similar concept to the Multiverse repository in Ubuntu. The Repository is at:
 
-= Sites =
-The Repository: http://downloads.openmoko.org/repository/Multiverse
+ http://downloads.openmoko.org/repository/Multiverse
 
-The mailing list: http://lists.openmoko.org/mailman/listinfo/community-repository
 
-= How to release packages = 
+== How to use the repository ? ==
 
-Sharing applications is done by uploading packages to the [http://downloads.openmoko.org/repository/Multiverse/ Community Repository], which is a similar concept to the Multiverse repository in Ubuntu.  [[CommunityRepository|Anyone can upload applications]] or even their own repository to share with fellow Neo owners. 
-You can release your package with ipk file. 
+This repository is already installed by default in [[Om2008.8 | Om 2008.8]].
+
+Otherwise, see instructions on the [http://wiki.openmoko.org/wiki/Om_2008.8_Installer installer page]. They involve creating a one line file in the /etc/opkg directory.
+
+== How to release packages ? ==
+
+Please use the mailing list: http://lists.openmoko.org/mailman/listinfo/community-repository .
+The package manager derives from [[opkg]], so applications should be released as .ipk files.
 
 * [[Create package on projects.openmoko.org and upload]]
-* how to create ipk files
+* Here are [http://handhelds.org/moin/moin.cgi/BuildingIpkgs| instructions to build ipkgs].
 ** Using OE
 ** [[Toolchain|Meta-toolchain]]
 
-
-===How to add a package to Openmoko Repository===
-
-
-==== Package Tags ====
 Packages in '''Installer''' are displayed according to '''Package Tags'''.
 To display a package through [[Om2008.8_Installer |Installer]], add the appropriate tag message. 
 {| class="wikitable" border:1px ;
@@ -41,58 +39,13 @@ To display a package through [[Om2008.8_Installer |Installer]], add the appropri
 |Repos          || group::repos
 |}
 
-
 * For OpenEmbedded users, add a Tag by adding one line in your bb file
 :For [http://code.google.com/p/comic-reader/source/browse/trunk/data/comic-reader_svn.bb example]:
  PKG_TAGS_${PN} = "group::games"
 
-= How to create your own repository =
-TBD
 
-== Package Tags ==
-If you want your package to be shown on [[Om2008.8_Installer |Installer]], please add tag message on your package. 
-{|
-! Category !! Tag 
-|- 
-| Communication || group::communication 
-|-
-| Development   || group::programming
-|-
-| Games         || group::games
-|-
-| Maps          || group::maps
-|-
-| Miscellaneous || group::unknown
-|-
-| Network       || group::network
-|-
-|Repos          || group::repos
-|}
+== Packages quality control ==
 
-* For OE user, please adding the Tag by adding one line in your bb file
-For [http://code.google.com/p/comic-reader/source/browse/trunk/data/comic-reader_svn.bb example]:
- PKG_TAGS_${PN} = "group::games"
-
-== Adding the community repository to the package manager == 
-
-The community-repository is already installed by default in [[Om2008.8 | Om 2008.8]]. Otherwise, see instructions on the [http://wiki.openmoko.org/wiki/Om_2008.8_Installer installer page].
-
-= We need your help =
-We need reviewers who can review new packages. If you want to help, please send e-mail to the mailing list ''community-repository@lists.openmoko.org
-''. 
-
-
-Reviewers must have the following:
-* an account on projects.openmoko.org
-* ssh public key on projects.openmoko.org
-* basic svn skills
-* basic opkg skills
-
-Openmoko really appreciates your help!
-  '''Current Reviewers'''
-  [http://wiki.openmoko.org/wiki/User_talk:Tick Tick]
-
-== Review Packages ==
 The reviewer will check if there have new packages on the mailing list. If you are reviewer and want to review that package
 * reply that mail, and say you want to review that
 * check if the package follows the policy 
@@ -105,13 +58,31 @@ The reviewer will check if there have new packages on the mailing list. If you a
 ** uninstall it and see if everything still ok?
 * if the package is okay, put the package in this [https://svn.openmoko.org/trunk/feeds/community-repository/file-index.txt file] and the package will shown next day. 
 
-=== Review Policy ===
-* Packages in this repository shall not in OM Official repositories
+Good packages should conform to these quality guidelines:
+
+* Packages in this repository shall not be in OM Official repositories
 * Program shall not collect user information and send to others unless it has very clear notification
 * Program shall not destroy the system
 * All packages shall be run-able on Neo
-* The package file name should refer which version of the project is compiled. 
+* The package file name should refer which version of the project is compiled.
 
+== How to contribute ? ==
+
+We need reviewers who can review new packages. This is currently a low workload. If you want to help, please send e-mail to the mailing list The mailing list: [http://lists.openmoko.org/mailman/listinfo/community-repository community-repository@lists.openmoko.org].
+
+Reviewers must have the following:
+* an account on projects.openmoko.org
+* ssh public key on projects.openmoko.org
+* basic svn skills
+* basic opkg skills
+
+Openmoko really appreciates your help!
+  '''Current Reviewers'''
+  [http://wiki.openmoko.org/wiki/User_talk:Tick Tick]
+
+== How to create your own repository ? ==
+
+TBD
 
 [[category:Documentation]]
 [[category:Community]]
