--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -28,7 +28,7 @@ You will download that program on your desktop computer. It will allow you to co
 
 '''MacOS X:''' [[MacOS_X#Graphical_Flashing_with_Openmoko_Flasher]]
 
-'''Linux:''' http://buildhost.openmoko.org/releases/FreeRunner/dfu-util
+'''Linux:''' http://buildhost.openmoko.org/releases/FreeRunner/dfu-util (Link is broken)
 
 Make sure it is executable by setting the permissions with this command: chmod a+x dfu-util
 
