--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -846,6 +846,7 @@ ordering rules:
 # Thomas Otterbein [http://wiki.openmoko.org/wiki/Special:Emailuser/Tommi Contact]
 # Beáta Müller [http://wiki.openmoko.org/wiki/Special:Emailuser/emm Contact]
 # Helle Kristóf [http://wiki.openmoko.org/wiki/Special:Emailuser/s8529hel Contact]
+# Nagy Zoltan [http://wiki.openmoko.org/wiki/Special:Emailuser/kirk Contact]
 
 ==== groups ====
 
