/* How to install the illume (Raster's) keyboard ? */ Update hot from ML

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -58,7 +58,13 @@ Long answer: [[Switching_Keyboards|here]].
 
 Short answer (theoretical): wait until the ''illume-config-illume'' package arrives in the repository, then install it with ''opkg''.
 
-Update: It is available in the testing feeds, but it does not give you the keyboard.
+Detailed answer:
+ 1. opkg install -force-overwrite install http://downloads.openmoko.org/repository/testing/all/illume-config-illume_0.0+svnr35693-r13_all.ipk
+ 2. opkg install illume-config (get qwerty button)
+ 3. echo 'E_PROFILE="-profile illume"' > /etc/enlightenment/default_profile (switch to the illume profile from asu)
+ 4. rm -rf ~/.e/e/config/illume
+ 5. add "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" in /etc/X11/Xsession.d/89qtopia
+ 6. Reboot
 
 === How to turn off the Qtopia keyboard ? ===
 
