/* How to install the illume (Raster's) keyboard ? */ Just restart X, no need to reboot

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -59,12 +59,12 @@ Long answer: [[Switching_Keyboards|here]].
 Short answer (theoretical): wait until the ''illume-config-illume'' package arrives in the repository, then install it with ''opkg''.
 
 Detailed answer:
- 1. opkg install -force-overwrite install http://downloads.openmoko.org/repository/testing/all/illume-config-illume_0.0+svnr35693-r13_all.ipk
- 2. opkg install illume-config (get qwerty button)
- 3. echo 'E_PROFILE="-profile illume"' > /etc/enlightenment/default_profile (switch to the illume profile from asu)
- 4. rm -rf ~/.e/e/config/illume
- 5. add "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" in /etc/X11/Xsession.d/89qtopia
- 6. Reboot
+ 1. opkg install illume-config (Get the qwerty button if not there yet)
+ 2. add "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" in /etc/X11/Xsession.d/89qtopia (Turn off buildin qtopia keyboard)
+ 3. opkg install -force-overwrite install http://downloads.openmoko.org/repository/testing/all/illume-config-illume_0.0+svnr35693-r13_all.ipk
+ 4. echo 'E_PROFILE="-profile illume"' > /etc/enlightenment/default_profile (Switch to the illume profile from asu)
+ 5. rm -rf ~/.e/e/config/illume (Purge E's cache)
+ 6. /etc/init.d/xserver-nodm restart (Restart X)
 
 === How to turn off the Qtopia keyboard ? ===
 
