--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -24,7 +24,7 @@ The keyboard only displays a subset of the available keys at any one time.  To c
 
 The default layout when the keyboard is displayed is the lowercase alphabet but this may be overwritten by the application bringing up the keyboard. 
 
-==== Where is the Backspase or Space character? ====
+=== Where is the Backspase or Space character? ===
 You can input a space or backspace by simply sliding with your finger left or right. Sliding left on the keyboard gives you an backspace, sliding right writes a space.
 Note that to delete a character inside the input box, the word guessing box needs to be empty. If it is not empty, the backspace will first delete the box and you need to slide your finger left again. If something is inside the guessing box, a right-slide will transfer the typed stuff to the input box currently selected (this is the same as clicking onto the typed word).
 
