/* Reactivating The Keyboard Toggle */ Grammar

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -49,7 +49,7 @@ For a description of alternative solutions and potential workarounds, see [[Keyb
 Also, bellow are some (more ?) customizations/tweaks/hacks proposed by some users :
 
 == Reactivating The Keyboard Toggle ==
-Most applications should bring up the keyboard automatically when keyboard input is required, however, advanced users can activate a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
+Most applications should bring up the keyboard automatically when keyboard input is required. However, one can have a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
 
 == Using the Full Qwerty keyboard ==
 If you prefer a full qwerty keyboard you have to do some steps:
