/* Using the Full Qwerty keyboard */ Note section as obsolete

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -52,6 +52,9 @@ Also, bellow are some (more ?) customizations/tweaks/hacks proposed by some user
 Most applications should bring up the keyboard automatically when keyboard input is required. However, one can have a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
 
 == Using the Full Qwerty keyboard ==
+
+{{note|These informations are obsolete. They refer to the 2007.2 distributions. buildhost is not online anymore.}}
+
 If you prefer a full qwerty keyboard you have to do some steps:
 * backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd and /usr/lib/enlightenment/modules/illume/keyboards/Full-QWERTY.kbd
 * opkg install http://buildhost.openmoko.org/daily-feed/armv4t/libdbus-1-3_1.2.1-r3_armv4t.ipk
