--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3077,9 +3077,11 @@ Last Payment Date: (unknown)
 How to Pay: (unknown)
 
 How to Get: (unknown)
--
+
+--
+
 {| border="1"
-| Name
+| rowspan="2" | Name
 | colspan="2"| number of items
 |@
 |-
