/* Second Group Sale */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3083,12 +3083,10 @@ How to Get: (unknown)
 {| border="1"
 | rowspan="2" | Name
 | colspan="2"| number of items
-|@
+|rowspan="2" |@
 |-
-|
 | FreeRunner
 | Dboard
-| 
 |-
 | 1. david0319 (david0319.tw@)
 | 1
@@ -3100,6 +3098,7 @@ How to Get: (unknown)
 | 1
 | 
 |}
+
 === 080817 Group Sale ===
 Host: Mac Lin (mkl23@hotmail.com)
 
