*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -19,7 +19,7 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 <td>
 * 28/8: Trolltech [http://n2.nabble.com/qtopia-4.3.2-release-tp789148p789148.html released] Qtopia 4.3.2.
 * 26/8: Openmoko [http://lists.openmoko.org/pipermail/community/2008-August/027997.html updates] [[Om 2008.8]] distribution.
-* 15/8: [[Debian]] on the FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html announced], [http://wiki.debian.org/DebianOnFreeRunner instructions].
+* 15/8: [[Debian]] on the FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html announced] ( instructions for [http://wiki.debian.org/DebianOnFreeRunner FreeRunner] and [http://wiki.debian.org/DebianOnNeo1973 Neo1973]).
 * 8/8: Openmoko team [http://lists.openmoko.org/pipermail/community/2008-August/025602.html releases] distribution formerly called ASU as [[Om 2008.8]] .
 * 4-5/8: Openmoko is at Linuxworld, San Francisco. [http://www.youtube.com/watch?v=jWJjNF36DfI Video](Not available now).
 * 30/7: The FSO distribution releases [http://downloads.openmoko.org/framework/milestone2/ milestone 2] 
