*Empty MediaWiki Message*

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -58,7 +58,7 @@ This is only a subset, and some of the bits reported below may have been fixed b
 
 '''Suspend'''
 
-Builds from the last days of August tend to suspend after 30s no matter what you set in settings. Switching the screensaver off with `xset s off' disables suspend completely.
+Builds from the last days of August tend to suspend after 30s no matter what you set in settings. Switching the screensaver off with `xset s off' disables suspend completely.  Note that this command must be typed into the terminal application on the phone itself; if you try to run it from an ssh session it fails with the error `xset:  unable to open display ""'.  This is because ssh sessions change the display settings expecting you might want X11 forwarding.  In fact if you are using X11 forwarding with ssh -Y, the command won't fail over ssh, but it still won't do what you expect, as xset will assume you're talking about the forwarded X11 session, and thus doesn't affect the X11 session on the phone.  Therefore you must install the terminal application and use it to enter `xset s off'.
 
 '''GSM'''
 
