Updated way of import addressbook on latest qtopia

--- a/Import_Vcf_Contacts.mw
+++ b/Import_Vcf_Contacts.mw
@@ -135,8 +135,11 @@ The Qtopia addressbook application supports import of VCF files out of the box:
 If you're connected via SSH, run the following command first:
   export DISPLAY=:0
 
-To import your address book from VCard format:
+To import your address book from VCard format (ASU/<=Qtopia 4.3.2-080808 snapshot):
   LD_LIBRARY_PATH=/opt/Qtopia/lib /opt/Qtopia/bin/addressbook /home/root/addressbook.vcf
+
+To import your address book from VCard format (>=Qtopia 4.3.2 stable):
+  LD_LIBRARY_PATH=/opt/Nokia/Qtopia/lib /opt/Nokia/Qtopia/bin/addressbook /home/root/addressbook.vcf
 
 You will be asked if you want to import the contacts form addressbook.vcf (the contact name will be taken from the "N:" vCard field).
 
