--- a/Neo_FreeRunner%2Fde.mw
+++ b/Neo_FreeRunner%2Fde.mw
@@ -2,7 +2,7 @@
 <br />
 
 Der '''Neo FreeRunner''' (Codename [[GTA02 revisions|GTA02]]) ist der direkte Nachkomme des [[Neo 1973]].<br />
-Dieses Samrtphone wurde extra dafür entwickelt um die OpenMoko Software auszuführen.
+Dieses Smartphone wurde extra dafür entwickelt um die OpenMoko Software auszuführen.
 
 {|align
   |__TOC__
