/* Q: I'd like to develop a product (software application, custom hardware) based on Openmoko and/or the Neo FreeRunner. How do I get started? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -26,7 +26,7 @@ A: Absolutely. If your a visual artist, you can help us with icons and other vis
 
 === Q: I'd like to develop a product (software application, custom hardware) based on Openmoko and/or the Neo FreeRunner. How do I get started? ===
 
-A:  Send mail to michael@openmoko.org
+A:  Send mail to michael@openmoko.org or to steve@openmoko.com
 
 === Q: Where can I buy the [[Neo FreeRunner]]? ===
 
