Engl. Links auf Deutsche gesetzt (unter Neo Freerunner-GTA02)

--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -84,9 +84,9 @@ Die deutschen Haendler erwarten eine neue Lieferung Mitte September.
 <font color=white> ※</font>[[: Category:Neo1973 Hardware |  See More About Neo 1973....]]
 |valign="TOP" style="background:#333333;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #cccccc; " |
 *[[GTA02 Openness]]
-*[[Neo FreeRunner]]
+*[[Neo FreeRunner/de|Neo FreeRunner]]
 *[[Neo FreeRunner GTA02 Hardware]]
-*[http://wiki.openmoko.org/wiki/Getting_Started_with_your_Neo_FreeRunner/de Wie ich meinen NeoFreerunner Starte]
+*[[Getting Started with your Neo FreeRunner/de|Wie ich meinen Neo Freerunner Starte]]
 *[[Prototypes]]
 
 <font color=white> ※</font>[[: Category: GTA02 Hardware |  See More About GTA02....]]
