--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -11,6 +11,14 @@ An official announcement was made by Sean Moss-Pultz on August 20:
 
 (Initially this was named OM-2008 in SVN but renamed shortly after that.)
 
+= Known Issues =
+
+This is only a subset, and some of the bits reported below may have been fixed by stable updates. See [http://docs.openmoko.org/trac/search?q=2007.2 all tickets with 2007.2] in the bug tracker.
+
+'''Missing Esc key'''
+
+With default image you can't escape edit mode in vi due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the FreeRunner from your computer and use the keyboard on that computer to edit files in vi. Alternative on-screen keyboards feature an escape key.
+
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
