--- a/FAQ.mw
+++ b/FAQ.mw
@@ -93,8 +93,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 :Type <tt>:q</tt> or <tt>:q!</tt> to quit, or <tt>ZZ</tt> to save.
 
-:With default image you can't escape edit mode, due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the FreeRunner from your computer and use the keyboard on that computer to edit files in vi. Alternative on-screen keyboards feature an escape key.
-
+:With default image you can't escape edit mode, due to the missing Esc key. See [[Known_Issues 2007.2]]
 
 ==== How do I enter the /, | or > characters? ====
 
