--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -19,6 +19,8 @@ This is only a subset, and some of the bits reported below may have been fixed b
 
 With default image you can't escape edit mode in vi due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the FreeRunner from your computer and use the keyboard on that computer to edit files in vi. Alternative on-screen keyboards feature an escape key.
 
+If you are stuck in vi you can type <tt>:q</tt> or <tt>:q!</tt> to exit without saving, or <tt>ZZ</tt> to save and exit.
+
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
