/* How do I save file in 'vi' or escape the edit mode? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -89,11 +89,9 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 :Have a look here: http://wiki.openmoko.org/wiki/Flashing_the_Neo_FreeRunner
 
 
-==== How do I save file in 'vi' or escape the edit mode? ====
+==== Some vital keys seem to be missing from the keyboard ====
 
-:Type <tt>:q</tt> or <tt>:q!</tt> to quit, or <tt>ZZ</tt> to save.
-
-:With default image you can't escape edit mode, due to the missing Esc key. See [[Known_Issues 2007.2]]
+:See [[Known_Issues 2007.2]]
 
 ==== How do I enter the /, | or > characters? ====
 
