/* Where can I download and reinstall the factory default image? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -86,8 +86,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 ==== Where can I download and reinstall the factory default image? ====
 
-:Have a look here: http://wiki.openmoko.org/wiki/Flashing_the_Neo_FreeRunner
-
+[[Flashing_the_Neo_FreeRunner]]
 
 ==== Some vital keys seem to be missing from the keyboard ====
 
