--- a/FAQ.mw
+++ b/FAQ.mw
@@ -90,7 +90,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 ==== Some vital keys seem to be missing from the keyboard ====
 
-:See [[Known_Issues 2007.2]]
+[[Known_Issues 2007.2]]
 
 ==== How do I enter the /, | or > characters? ====
 
