--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -29,6 +29,13 @@ With default image these keystrokes are missing from the 0 button, due to a bug.
 
 Alternative on-screen keyboards should have these characters.
 
+'''"Signature Check Failed" errors when running `opkg update`'''
+
+The signatures are missing from the repository.
+
+Workaround: If the Packages.gz files are downloading ok you can ignore this error.
+After your first <tt>opkg upgrade</tt> you should get these signatures.
+
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
