/* When running `opkg update` I get "Signature Check Failed" errors. */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -96,10 +96,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 ==== When running `opkg update` I get "Signature Check Failed" errors. ====
 
-:This is normal - the signatures are missing from the repository.
-:As long as the Packages.gz files are downloading ok then don't worry about it for the moment.
-:Just try running <tt>opkg upgrade</tt> - if this is  the first time you've tried updating your phone then you should see quite a number of packages upgrading.
-
+See [[Om_2007.2#Known_Issues|here]]
 
 ==== The SSH / Dropbear connections over the USB link frequently freezes. ====
 
