/* Some vital keys seem to be missing from the keyboard */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -90,9 +90,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 ==== Some vital keys seem to be missing from the keyboard ====
 
-[[Known_Issues 2007.2]]
-
-
+See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 ==== When running `opkg update` I get "Signature Check Failed" errors. ====
 
