/* When running `opkg update` I get "Signature Check Failed" errors. */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -94,7 +94,7 @@ See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 ==== When running `opkg update` I get "Signature Check Failed" errors. ====
 
-See [[Om_2007.2#Known_Issues|here]]
+See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 ==== The SSH / Dropbear connections over the USB link frequently freezes. ====
 
