/* The SSH / Dropbear connections over the USB link frequently freezes. */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -98,8 +98,7 @@ See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 ==== The SSH / Dropbear connections over the USB link frequently freezes. ====
 
-:This happens when the phone goes to sleep after a few minutes. To unfreeze, unplug and replug the USB cable. To stop this from happening, hold on the Power button to get the Power menu, then choose Power Management: Disabled.
-
+See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 ==== My device is unresponsive, how should I hard reboot? ====
 
