--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -17,7 +17,7 @@ This is only a subset, and some of the bits reported below may have been fixed b
 
 '''Missing Esc key'''
 
-With default image you can't escape edit mode in vi due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the FreeRunner from your computer and use the keyboard on that computer to edit files in vi. 
+With the default image you can't escape edit mode in vi due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the FreeRunner from your computer and use the keyboard on that computer to edit files in vi. 
 
 Alternative on-screen keyboards feature an escape key.
 
@@ -25,7 +25,7 @@ If you are stuck in vi you can type <tt>:q</tt> or <tt>:q!</tt> to exit without 
 
 '''Missing /, | and > keys'''
 
-With default image these keystrokes are missing from the 0 button, due to a bug. This can be fixed by editing <tt>/etc/multitap-pad/im-multipress.conf</tt>, see [[Switching_Keyboards#Fix_Default| this page]], but unfortunately you need vi, or some other editor to do so. Therefore you need to SSH in and [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first.
+These keys are missing from the 0 button. This can be fixed by editing <tt>/etc/multitap-pad/im-multipress.conf</tt>, see [[Switching_Keyboards#Fix_Default| this page]], but unfortunately you need vi, or some other editor to do so. Therefore you need to SSH in and [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first.
 
 Alternative on-screen keyboards should have these characters.
 
