--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -39,6 +39,9 @@ After your first <tt>opkg upgrade</tt> you should get these signatures.
 '''The SSH / Dropbear connections over the USB link frequently freezes'''
 This happens when the phone goes to sleep after a few minutes. To unfreeze, unplug and replug the USB cable. To stop this from happening, press the Power button to get the Power menu, then choose Power Management: Disabled.
 
+'''My device seems frozen. How do I perform a hard reset? '''
+For different boot methods, see [[Booting the Neo FreeRunner]].
+
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
