/* My device is unresponsive, how should I hard reboot? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -102,6 +102,8 @@ See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 ==== My device is unresponsive, how should I hard reboot? ====
 
+See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
+
 === ASU software image ===
 
 ==== Why are the buttons in TangoGPS too large? The zoom out is missing! ====
