/* Getting Started with your Neo FreeRunner */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -82,6 +82,10 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 == Getting Started with your Neo FreeRunner == <!-- Do not rename section! This section is linked from pages which linked to Getting_Started_FAQ. -->
 
+=== I'm new. Where should I start?===
+
+See [[Getting_Started_with_your_Neo_FreeRunner|Getting Started with your Neo FreeRunner]]
+
 === 2007.2 factory default software image ===
 
 ==== Where can I download and reinstall the factory default image? ====
